[java] JSpecify package name updated
GitOrigin-RevId: 43704bf6bbecb3502d6fea1ef223d79bd478b644